=== 5.64.0 (2023-01-01)

* Make :db_type column schema entries on SQLAnywhere include precision/scale information (jeremyevans)

* Include :min_value and :max_value schema entries for decimal/numeric columns on most databases (rolftimmermans, jeremyevans) (#1975)

* Support :graph_use_association_block association option to make eager_graph use the association block (jeremyevans)

* Make many_through_many and many_through_one associations support eager_graph callbacks (jeremyevans)

=== 5.63.0 (2022-12-01)

* Make validates_associated plugin avoid database type errors for non-integer association keys (jeremyevans) (#1968)

* Make tactical_eager_loading plugin work better with table inheritance plugins (rolftimmermans, jeremyevans) (#1962)

* Add support for pool_class: :timed_queue on Ruby 3.2+, using a Queue for available connections (jeremyevans)

* Allow :pool_class Database option to be specified as a string to more easily choose a different pool type (jeremyevans)

* Use compare_by_identity hashes for Thread-keyed hashes in threaded connection pools (jeremyevans)

* Skip use of JRuby workaround on JRuby 9.3.9.0+ in named_timezones extension as JRuby fixed the related bug (jeremyevans)

=== 5.62.0 (2022-11-01)

* Add back the pg_auto_parameterize extension for automatically using bound variables when using postgres adapter with pg driver (jeremyevans)

* Add pg_extended_integer_support extension for customizing behavior when literalizing a Ruby integer outside PostgreSQL bigint range (jeremyevans)

* Raise Postgres::IntegerOutsideBigintRange if attempting to literalize a Ruby integer outside PostgreSQL bigint range (jeremyevans)

* Add primary_key_lookup_check_values plugin for typecasting and checking primary key values during lookup (jeremyevans)

* Setup validation of minimum and maximum values for integer columns in auto_validations (jeremyevans)

* Add validates_max_value and validates_min_value to validation_helpers (jeremyevans)
